fix:修复二次发布时，笔记属性丢失的问题

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "obsidian-wordpress",
-	"name": "WordPress",
+	"id": "obsidian-wordpress-at",
+	"name": "WordPress-AT",
 	"version": "0.18.0",
 	"minAppVersion": "1.1.1",
 	"description": "A plugin for publishing Obsidian documents to WordPress.",
